--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -4,7 +4,8 @@
 <div class="row">
     <div class="col">
         
-        <app-personajes [personajes]="personajes"></app-personajes>
+        <app-personajes [personajes]="personajes">
+        </app-personajes>
     </div>
     
     <div class="col">
